--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -15,9 +15,10 @@
             <th>Role</th>
         </tr>
         <tr th:each="employee : ${employees}">
-            <td th:text="${employee.employeeId}"></td>
-            <td th:text="${employee.name}"></td>
-            <td th:text="${employee.role}"></td>
+            <td th:text="${employee.id}"></td>
+            <td th:text="${employee.first_name}"></td>
+            <td th:text="${employee.last_name}"></td>
+            <td th:text="${employee.email}"></td>
         </tr>
     </table>
 </body>
