--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -6,20 +6,30 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Just spring boot things</h1>
-    <h2>Employee</h2>
-    <table>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Role</th>
-        </tr>
-        <tr th:each="employee : ${employees}">
-            <td th:text="${employee.id}"></td>
-            <td th:text="${employee.first_name}"></td>
-            <td th:text="${employee.last_name}"></td>
-            <td th:text="${employee.email}"></td>
-        </tr>
-    </table>
+<h1>Just spring boot things</h1>
+<h2>Employee</h2>
+<a th:href="@{/ShowNewEmployee}" class="btn btn-primary">Add Employee</a>
+<table class="table">
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Role</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="employee : ${employees}">
+        <td th:text="${employee.id}"></td>
+        <td th:text="${employee.first_name}"></td>
+        <td th:text="${employee.last_name}"></td>
+        <td th:text="${employee.email}"></td>
+        <td>
+            <a th:href="@{/delete_emp/{id}(id=${employee.id})}" class="btn btn-danger">Delete</a>
+            <a th:href="@{/show_update/{id}(id=${employee.id})}" class="btn btn-primary">Update</a>
+        </td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
