--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <h1>Just spring boot things</h1>
 <h2>Employee</h2>
 <a th:href="@{/ShowNewEmployee}" class="btn btn-primary">Add Employee</a>
-<table class="table">
-    <thead>
+<table class="table table-striped table-hover">
+    <thead class="thead-dark">
     <tr>
         <th>Id</th>
-        <th>Name</th>
-        <th>Role</th>
-        <th>Actions</th>
+        <th>first_name</th>
+        <th>last_name</th>
+        <th>email</th>
+        <th>actions</th>
     </tr>
     </thead>
     <tbody>
-    <tr th:each="employee : ${employees}">
+    <tr th:each="employee : ${employee}">
         <td th:text="${employee.id}"></td>
         <td th:text="${employee.first_name}"></td>
         <td th:text="${employee.last_name}"></td>
@@ -31,5 +33,9 @@
     </tr>
     </tbody>
 </table>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
