--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -18,6 +18,7 @@
         <th>last_name</th>
         <th>email</th>
         <th>actions</th>
+        <th>actions</th>
     </tr>
     </thead>
     <tbody>
